[gd_scene load_steps=3 format=3 uid="uid://bkcybt8es5cim"]

[ext_resource type="Script" path="res://actors/component/AI.gd" id="1_jvdfa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3p82f"]
radius = 300.0

[node name="AI" type="Node2D"]
script = ExtResource("1_jvdfa")
should_draw_path_line = true

[node name="DetectionZone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_3p82f")

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PathLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.92549, 0.435294, 0.435294, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
